--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,11 @@
-<H1> Hello World </H1>
+<html>
+<body>
+<H1> Docker sample web-app</H1>
+
+<section>
+<h1> Sample app for testing<h1>
+<p> NA </p>
+</section>
+
+</body>
+</html>
